@@ -1014,7 +1014,7 @@ ags_dssi_bridge_map_recall(AgsMachine *machine)
 		 "delay-audio-run\0", play_delay_audio_run,
 		 NULL);
     ags_seekable_seek(AGS_SEEKABLE(play_count_beats_audio_run),
-		      window->navigation->position_tact->adjustment->value * ags_soundcard_get_delay(AGS_SOUNDCARD(audio->soundcard)),
+		      window->navigation->position_tact->adjustment->value,
 		      TRUE);
   }else{
     play_count_beats_audio_run = NULL;
