@@ -151,8 +151,8 @@ ags_seek_soundcard_launch(AgsTask *task)
 
   GList *audio, *recall;
 
-  gdouble delay;
   guint note_offset;
+  guint note_offset_absolute;
 
   seek_soundcard = AGS_SEEK_SOUNDCARD(task);
 
@@ -173,20 +173,29 @@ ags_seek_soundcard_launch(AgsTask *task)
 
     audio = audio->next;
   }
-
-  delay = ags_soundcard_get_delay(AGS_SOUNDCARD(seek_soundcard->soundcard));
+  
   note_offset = ags_soundcard_get_note_offset(AGS_SOUNDCARD(seek_soundcard->soundcard));
+  note_offset_absolute = ags_soundcard_get_note_offset_absolute(AGS_SOUNDCARD(seek_soundcard->soundcard));
   
   if(seek_soundcard->move_forward){
     ags_soundcard_set_note_offset(AGS_SOUNDCARD(seek_soundcard->soundcard),
-				  note_offset + (seek_soundcard->steps / delay));
+				  note_offset + seek_soundcard->steps);
+
+    ags_soundcard_set_note_offset_absolute(AGS_SOUNDCARD(seek_soundcard->soundcard),
+					   note_offset_absolute + seek_soundcard->steps);
   }else{
-    if(note_offset > (seek_soundcard->steps / delay)){
+    if(note_offset > seek_soundcard->steps){
       ags_soundcard_set_note_offset(AGS_SOUNDCARD(seek_soundcard->soundcard),
-				    note_offset - (seek_soundcard->steps / delay));
+				    note_offset - seek_soundcard->steps);
+
+      ags_soundcard_set_note_offset_absolute(AGS_SOUNDCARD(seek_soundcard->soundcard),
+					     note_offset_absolute - seek_soundcard->steps);
     }else{
       ags_soundcard_set_note_offset(AGS_SOUNDCARD(seek_soundcard->soundcard),
 				    0.0);
+
+      ags_soundcard_set_note_offset_absolute(AGS_SOUNDCARD(seek_soundcard->soundcard),
+					     0.0);
     }
   }
 }
