@@ -126,6 +126,8 @@ ags_soundcard_get_attack
 ags_soundcard_get_delay_counter
 ags_soundcard_set_note_offset
 ags_soundcard_get_note_offset
+ags_soundcard_set_note_offset_absolute
+ags_soundcard_get_note_offset_absolute
 ags_soundcard_set_loop
 ags_soundcard_get_loop
 ags_soundcard_get_loop_offset
