@@ -2,7 +2,10 @@ ags (0.7.103)
 
 	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
 	* implemented ags_soundcard_get_note_offset_absolute()
-	* TODO implemented ags_soundcard_change_note_offset() task
+	* improved mutices in ags_navigation.c
+	* fixed possible access of uninitialized memory in ags_cell_pattern_led_queue_draw_timeout()
+	* fixed possible access of uninitialized memory in ags_pattern_box_led_queue_draw_timeout()
+	* simplified seeking
 
 ags (0.7.102)
 
